[package]
name = "user-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# we have to use spin here
buddy_system_allocator = { version = "0.11.0"}
colorz = "1.1.4"
hashbrown = "0.15.4"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["alloc"] }

[[bin]]
name = "io_test_keyboard"
path = "io_tests/keyboard.rs"

[[bin]]
name = "io_test_vga"
path = "io_tests/video.rs"